--- a/mobile/include/css/contents_h.css
+++ b/mobile/include/css/contents_h.css
@@ -217,14 +217,14 @@
   margin: 0;
   width: 2rem;
   height: 2rem;
-  background: url("../images/ico32_arrow_circle_right.svg") no-repeat;
+  background: url("/cm/static/mobile/images/main_new/ico32_arrow_circle_right.svg") no-repeat;
 }
 .d_badge_swiper .swiper-button-prev {
   position: initial;
   margin: 0;
   width: 2rem;
   height: 2rem;
-  background: url("../images/ico32_arrow_circle_left.svg") no-repeat;
+  background: url("/cm/static/mobile/images/main_new/ico32_arrow_circle_left.svg") no-repeat;
 }
 .d_badge_swiper .swiper-pagination {
   position: initial;
@@ -284,10 +284,10 @@
   background-size: 1.5rem;
 }
 .d_bann_gray > a .bg_guide1 {
-  background-image: url("../images/ico40_directbox_cir.svg");
+  background-image: url("/cm/static/images/ico40_directbox_cir.svg");
 }
 .d_bann_gray > a .bg_guide2 {
-  background-image: url("../images/ico40_digitalbadge_cir.svg");
+  background-image: url("/cm/static/images/ico40_digitalbadge_cir.svg");
 }
 
 .emp_info_dtl > li + li {
@@ -304,25 +304,25 @@
   padding-left: 1.5rem;
   background-position: 0 0.375rem;
   background-repeat: no-repeat;
-  background-image: url("../images/ico16_job.svg");
+  background-image: url("/cm/static/images/ico16_job.svg");
 }
 .emp_info_dtl > li.site {
   padding-left: 1.5rem;
   background-position: 0 0.375rem;
   background-repeat: no-repeat;
-  background-image: url("../images/ico16_location.svg");
+  background-image: url("/cm/static/images/ico16_location.svg");
 }
 .emp_info_dtl > li.dollar {
   padding-left: 1.5rem;
   background-position: 0 0.375rem;
   background-repeat: no-repeat;
-  background-image: url("../images/ico16_coin2.svg");
+  background-image: url("/cm/static/images/ico16_coin2.svg");
 }
 .emp_info_dtl > li.member {
   padding-left: 1.5rem;
   background-position: 0 0.375rem;
   background-repeat: no-repeat;
-  background-image: url("../images/ico16_member.svg");
+  background-image: url("/cm/static/images/ico16_member.svg");
 }
 
 .vline_group .item {
@@ -368,11 +368,11 @@
   align-items: center;
 }
 .dgt_guide_wrp .top_info.bg1 {
-  background: #d9e6fe url("../images/bg_dgt_guide1.png") right 0 no-repeat;
+  background: #d9e6fe url("/cm/static/images/bg_dgt_guide1.png") right 0 no-repeat;
   background-size: contain;
 }
 .dgt_guide_wrp .top_info.bg2 {
-  background: #100623 url("../images/bg_dgt_guide2.png") right bottom no-repeat;
+  background: #100623 url("/cm/static/images/bg_dgt_guide2.png") right bottom no-repeat;
   background-size: contain;
 }
 .dgt_guide_wrp .top_info.bg2 .title, .dgt_guide_wrp .top_info.bg2 .sub {
@@ -382,7 +382,7 @@
   background-color: #fff;
 }
 .dgt_guide_wrp .top_info.bg3 {
-  background: #E1ECFE url("../images/bg_dgt_guide3.png") right bottom no-repeat;
+  background: #E1ECFE url("/cm/static/images/bg_dgt_guide3.png") right bottom no-repeat;
   background-size: contain;
 }
 .dgt_guide_wrp .top_info .title {
