--- a/mobile/include/css/layout.css
+++ b/mobile/include/css/layout.css
@@ -140,12 +140,14 @@ header .header_main_area .header_title_area .header_division > li.active > a {
   border-radius: 1.875rem;
 }
 header .header_main_area .header_title_area .header_division > li:first-child.active a {
-  background: #29c78e;
-}
-header .header_main_area .header_title_area .header_division > li:last-child.active a {
-  background: #4d65e1;
+  background: #3F58D4;
   color: #fff;
-}
+} /* 20250602 수정 */
+header .header_main_area .header_title_area .header_division > li:last-child.active a {
+  background: #24A960;
+  color: #fff;
+} /* 20250602 수정 */
+ /* 20250701 수정 */
 header .header_main_area .header_util_area > ul {
   display: flex;
   justify-content: center;
@@ -293,13 +295,14 @@ header .header_main_area .header_util_area > ul > li.header_btn_all_menu > butto
   background-size: contain;
 }
 header .header_main_area .header_util_area > ul > li.header_btn_set_mobile > button {
-  /*background:url("../images/img_WF_grd_modify.png") no-repeat;width:22px;height:22px;
-  background-size: contain;*/
-  background: url("data:image/svg+xml,%3Csvg width='24' height='24' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M12 15C13.6569 15 15 13.6569 15 12C15 10.3431 13.6569 9 12 9C10.3431 9 9 10.3431 9 12C9 13.6569 10.3431 15 12 15Z' stroke='%23333333' stroke-width='1.5' stroke-miterlimit='10' stroke-linecap='round' stroke-linejoin='round'/%3E%3Cpath d='M2.25 12.874V11.126C2.25 10.093 3.07834 9.23882 4.10157 9.23882C5.86544 9.23882 6.58658 7.96749 5.69978 6.40812C5.19303 5.51421 5.49513 4.35213 6.38193 3.83565L8.06784 2.85235C8.83771 2.38553 9.83171 2.66364 10.2897 3.44829L10.3969 3.637C11.274 5.19637 12.7163 5.19637 13.6031 3.637L13.7103 3.44829C14.1683 2.66364 15.1623 2.38553 15.9322 2.85235L17.6181 3.83565C18.5049 4.35213 18.807 5.51421 18.3002 6.40812C17.4134 7.96749 18.1346 9.23882 19.8984 9.23882C20.9119 9.23882 21.75 10.0831 21.75 11.126V12.874C21.75 13.907 20.9217 14.7612 19.8984 14.7612C18.1346 14.7612 17.4134 16.0325 18.3002 17.5919C18.807 18.4957 18.5049 19.6479 17.6181 20.1644L15.9322 21.1476C15.1623 21.6145 14.1683 21.3364 13.7103 20.5517L13.6031 20.363C12.726 18.8036 11.2837 18.8036 10.3969 20.363L10.2897 20.5517C9.83171 21.3364 8.83771 21.6145 8.06784 21.1476L6.38193 20.1644C5.49513 19.6479 5.19303 18.4858 5.69978 17.5919C6.58658 16.0325 5.86544 14.7612 4.10157 14.7612C3.07834 14.7612 2.25 13.907 2.25 12.874Z' stroke='%23333333' stroke-width='1.5' stroke-miterlimit='10' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E%0A") 0 0 no-repeat;
-}
+	height: 2rem;
+	background: url(../images/ico_MO_setting.svg) 0 0 no-repeat;
+	background-size: auto 100%;
+	vertical-align: top;
+} /* 20250602 수정 */
 header .header_main_area .header_util_area > ul > li + li {
-  margin-left: 1rem;
-}
+  margin-left: 0.5rem;
+} /* 20250602 수정 */
 header .header_main_area.sticky {
   width: 100%;
   background: #fff;
@@ -425,8 +428,8 @@ footer.is_bottom {
   padding-bottom: calc(5.75rem + env(safe-area-inset-bottom));
 }
 footer .quick_links {
-  border-top: 1px solid #757575;
-  border-bottom: 1px solid #757575;
+  border-top: 1px solid #ddd;
+  border-bottom: 1px solid #ddd;
 }
 footer .quick_links button {
   width: 100%;
@@ -448,13 +451,13 @@ footer .quick_links button::after {
   right: 1rem;
 }
 footer .footer_menu {
-  padding: 2.5rem 0 2rem;
+  padding: 2.5rem 0 0;
   display: flex;
   flex-wrap: wrap;
 }
 footer .footer_menu > li {
   width: 50%;
-  padding: 0.5rem 1.25rem 0;
+  padding: 0.5rem 1.25rem 0 0;
 }
 footer .footer_menu > li:nth-child(1), footer .footer_menu > li:nth-child(2) {
   padding-top: 0;
@@ -561,6 +564,9 @@ footer .footer_address .address p {
   margin-top: 0.5rem;
   font-size: 0.75rem;
 }
+.bottom_bar > ul > li > a i.green + span {color: #1C824A;} /* 250724 추가 */
+.bottom_bar > ul > li > a i.blue + span {color: #3F58D4;} /* 250724 추가 */
+
 .bottom_bar > ul > li > a.bottom_bar_job_center i {
   background: url("data:image/svg+xml,%3Csvg width='24' height='24' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M15.25 11C15.25 10.8619 15.3619 10.75 15.5 10.75H20C20.1381 10.75 20.25 10.8619 20.25 11V13.6V21C20.25 21.1381 20.1381 21.25 20 21.25H15.5C15.3619 21.25 15.25 21.1381 15.25 21V11Z' fill='white' stroke='%23333333' stroke-width='1.5'/%3E%3Cpath d='M3.75 3C3.75 2.86193 3.86193 2.75 4 2.75H15C15.1381 2.75 15.25 2.86193 15.25 3V8V21C15.25 21.1381 15.1381 21.25 15 21.25H4C3.86193 21.25 3.75 21.1381 3.75 21V3Z' fill='white' stroke='%23333333' stroke-width='1.5'/%3E%3Crect x='6' y='6' width='2' height='2' fill='%23333333'/%3E%3Crect x='6' y='10' width='2' height='2' fill='%23333333'/%3E%3Crect x='11' y='6' width='2' height='2' fill='%23333333'/%3E%3Crect x='11' y='10' width='2' height='2' fill='%23333333'/%3E%3C/svg%3E%0A") no-repeat center center;
 }
@@ -808,10 +814,11 @@ header .header_main_area .header_title_area .header_division > li > a {
 header .header_main_area .header_util_area > ul > li.header_btn_all_menu, header .header_main_area .header_util_area > ul > li.header_btn_search { display: flex; align-items: center;}
 header .header_main_area .header_util_area > ul > li.header_btn_all_menu > button {
   width: 40px;
-  height: 31px;
+  height: 2rem;
   background: url(../images/ico_MO_menu.svg);
-  background-size: contain;
-}
+  background-size: auto 100%;
+  vertical-align: top;
+} /* 20250602 수정 */
 
 /* footer */
 footer {
@@ -826,8 +833,8 @@ footer.is_bottom {
 }
 footer .quick_links {
   background-color: #fff;
-  border-top: 1px solid #757575;
-  border-bottom: 1px solid #757575;
+  border-top: 1px solid #ddd;
+  border-bottom: 1px solid #ddd;
 }
 
 
@@ -858,10 +865,10 @@ header .header_main_area .header_title_area .header_division > li > a {
 header .header_main_area .header_util_area > ul > li.header_btn_all_menu { display: flex; align-items: center;}
 header .header_main_area .header_util_area > ul > li.header_btn_all_menu > button {
   width: 40px;
-  height: 31px;
+  height: 2rem;
   background: url(../images/ico_MO_menu.svg) no-repeat;
-  background-size: contain;
-}
+  background-size: auto 100%;
+} /* 20250602 수정 */
 
 /* footer */
 footer {
@@ -876,8 +883,8 @@ footer.is_bottom {
 }
 footer .quick_links {
   background-color: #fff;
-  border-top: 1px solid #757575;
-  border-bottom: 1px solid #757575;
+  border-top: 1px solid #ddd;
+  border-bottom: 1px solid #ddd;
 }
 footer .quick_links button::after {
   display: block;
@@ -945,6 +952,7 @@ footer .footer_address .logos.gov{
   flex-wrap: wrap;
   background-color: #fff;
   padding: 4px;
+  border-radius: 0.375rem;
 }
 
 footer .footer_address .logos .logos-gov-info{
@@ -1000,6 +1008,8 @@ footer .footer_address .logos .logos-gov-info{
 .bottom_bar > ul > li > a.active.bottom_bar_job_center i { background: url(../images/ico24_menu_system_active.svg) no-repeat;}
 .bottom_bar > ul > li > a.active.bottom_bar_btn_search i { background: url(../images/ico24_menu_search_active.svg) no-repeat;}
 .bottom_bar > ul > li > a.active.bottom_bar_home i { background: url(../images/ico24_menu_home_active.svg) no-repeat;}
+.bottom_bar > ul > li > a.active.bottom_bar_home i.green {background: url(../images/ico24_menu_home_green.svg) no-repeat;}/* 20250701 추가 */
+.bottom_bar > ul > li > a.active.bottom_bar_home i.blue {background: url(../images/ico24_menu_home_blue.svg) no-repeat;}/* 20250701 추가 */
 .bottom_bar > ul > li > a.active.bottom_bar_chatbot i { background: url(../images/ico24_menu_guide_active.svg) no-repeat;}
 .bottom_bar > ul > li > a.active.bottom_bar_customer_center i { background: url(../images/ico24_menu_login_active.svg) no-repeat;}
 .bottom_bar > ul > li > a.active.bottom_bar_attendance i { background: url(../images/ico24_menu_attendance_active.svg) no-repeat;}
@@ -1067,20 +1077,26 @@ footer .footer_address .logos .logos-gov-info{
   z-index: 10;
 }
 /* 옆으로 흐르는 텍스트 css */
+/* S: 옆으로 흐르는 텍스트 공지(20250630 수정) */
+.header_notice_area {position: absolute; left: 50%; top: 5.25rem; display: flex; padding: 0.625rem 1rem 0.625rem 1.25rem !important; width: 100%; height: 3.5rem !important; align-items: center; transform: translate(-50%,0); overflow: hidden;} /* 20250701 수정 */
+.header_notice_area span {line-height: initial; vertical-align: baseline;}
+.header_notice_area.person {background-color: #f2f4fc;}
+.header_notice_area.company {background-color: #f3fdf7;}
+.header_notice_area .txt_container {width: calc(100% - 1.5rem); padding-left: 1.5rem; position: relative;}
+.header_notice_area .txt_container ul {height: 2.5rem; overflow: hidden; display: flex; align-items: center;}
+.header_notice_area .txt_container ul li {list-style-type: none; display: none;}
+.header_notice_area .txt_container ul li.active {display: block;}
+.header_notice_area .txt_container ul li a {width: 100%; height: 100%; font-size: 0.875rem; color: #111; font-weight: 600; line-height: 1.25rem; display: -webkit-box; -webkit-line-clamp: 2; line-clamp: 2; -webkit-box-orient: vertical; overflow: hidden; text-overflow: ellipsis; word-break: break-all;}
+.header_notice_area .txt_container ul li a span {color: #e0024b; font-weight: 600;}
+.header_notice_area .mo_btnbox {display: flex; align-items: center; justify-content: center; width: 24px; height: 100%; margin-left: 0.25rem;}
+.header_notice_area .mo_btnbox button {position: relative; width: 24px; height: 24px; cursor: pointer;}
+.header_notice_area .mo_btnbox button span {font-size: 0;}
 
-.header_notice_area.person{
-	width:100%;
-	height:35px;
-}
-
-.header_notice_area.person{
-	background-color:#E8FCF0;
-}
-.header_notice_area.company{
-	background-color:#E3EEFF;
-}
-
-
+.header_notice_area .mo_btnbox button::before {content: ''; width: 1rem; height: 1rem; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);}
+.header_notice_area .mo_btnbox button.noti_play::before {background: url('../images/arrow16_play.svg') no-repeat center / contain;}
+.header_notice_area .mo_btnbox button.noti_pause::before {background: url('../images/ico16_pause.svg') no-repeat center / contain;}
+.header_notice_area .txt_container::before {content: ''; position: absolute; left: 0; top:50%; transform: translateY(-50%); display: block; width: 1rem; height: 1rem; background: url('../images/ico16_loudspeaker_gray.svg') no-repeat center / contain;}
+/* E: 옆으로 흐르는 텍스트 공지(20250630 수정)*/
 i.ico16_loudspeaker_black{ display:inline-block;width:16px;height:16px;background:url("../images/ico16_loudspeaker_black.svg") no-repeat; vertical-align:middle;}
 i.ico16_loudspeaker_white{ display:inline-block;width:16px;height:16px;background:url("../images/ico16_loudspeaker_white.svg") no-repeat; vertical-align:middle;}
 
