--- a/pc/css/contents.css
+++ b/pc/css/contents.css
@@ -23,6 +23,8 @@
 .allcare .sel.round.new_sel_span::after {pointer-events: none; content: ''; width: 16px; height: 16px; position: absolute; top: 50%; right: 12px; transform: translateY(-50%); background: url('../include/images/arrow16_down.svg') no-repeat center / contain;}
 
 /* 250820 수정 */
+.allcare_popup.new_popup * {letter-spacing: -0.02em}
+
 .allcare_popup.new_popup {padding: 32px 17px 40px 40px; position: fixed; left: 50%; top: 50%; transform: translate(-50%, -50%); background-color: #fff; width: 1040px; height: calc(100% - 200px); max-height: 680px; z-index: 9999;}
 .allcare_popup.new_popup .newpop_tit { width: initial; background-color: initial; position: relative; top: initial; z-index: initial;  padding-bottom: 24px; margin: 0 17px 24px 0; border-bottom: 1px solid #eee; display: flex; justify-content: space-between; align-items: center;}
 .allcare_popup.new_popup .newpop_tit h1 {font-size: 28px; color: #111; font-weight: 600; line-height: 40px;}
@@ -36,10 +38,31 @@
 .allcare_popup.new_popup .newpop_inner {height: calc(100% - 90px);overflow: auto; padding-right: 18px;}
 
 .allcare_popup.new_popup fieldset, .uni_prog_tool fieldset {border: none;} 
-.allcare .new_ipt button[class*='ico']{right: 12px;}
-.allcare .new_ipt .input_txt {padding-left: 12px;} 
-.allcare [class^='btn'].medium.newbtn_w60 {padding: 0 12px; min-width: 60px;}
-.allcare [class^='btn'].medium.newbtn_w88 {padding: 0 16px; min-width: 88px;}
+
+.allcare_popup.new_popup .new_radio_item {display: flex; align-items: center; position: relative;}
+.allcare_popup.new_popup .new_radio_item + .new_radio_item {margin-left: 16px;}
+.allcare_popup.new_popup .new_radio_item input[type="radio"] {position: absolute; width: 1px; height: 1px; margin: -1px; padding: 0; overflow: hidden; clip: rect(0 0 0 0); clip-path: inset(100%); border: 0;}
+.allcare_popup.new_popup .new_radio_item label {height: auto; display: flex; align-items: center; cursor: pointer;}
+.allcare_popup.new_popup .new_radio_item label .radio_ui {display: block; margin: 0; width: 22px; height: 22px; border: 1px solid #757575; border-radius: 50%; position: relative;}
+.allcare_popup.new_popup .new_radio_item input[type="radio"]:checked + label .radio_ui::after {content: ""; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); width: 22px; height: 22px; border: 5px solid var(--col_blue); border-radius: 50%;}
+.allcare_popup.new_popup .new_radio_item label .label_text {margin-left: 5px; font-size: 16px; font-weight: 400; color: #333; line-height: 22px; }
+.allcare_popup.new_popup input[type="checkbox"].new_chkbox {position: relative; width: 20px; height: 20px; border: 1px solid #757575; border-radius: 4px;}
+.allcare_popup.new_popup input[type="checkbox"].new_chkbox:checked::before {content: ''; position: absolute; width: 20px; height: 20px; border: 1px solid var(--col_blue); border-radius: 4px; background-color: var(--col_blue);} 
+.allcare_popup.new_popup input[type="checkbox"].new_chkbox:checked::after {content: ''; position: absolute; width: 12px; height: 12px; left: 50%; top: 50%; transform: translate(-50%, -50%); background: url('../images/support/ico10_chk.svg') no-repeat center / contain;} 
+
+.allcare_popup.new_popup .new_ipt button[class*='ico']{right: 12px;}
+.allcare_popup.new_popup .new_ipt .input_txt {padding-left: 12px;} 
+.allcare_popup.new_popup [class^='btn'].medium.newbtn_w60 {padding: 0 12px; min-width: 60px;}
+.allcare_popup.new_popup [class^='btn'].medium.newbtn_w88 {padding: 0 16px; min-width: 88px;}
+
+.allcare_popup.new_popup .sr_only {position: absolute; width: 1px; height: 1px; padding: 0; margin: -1px; overflow: hidden; clip: rect(0 0 0 0); white-space: nowrap; border: 0; font-size: 0;}
+
+.allcare_popup.new_popup .uni_prog_tool tr.new_date .date_select {position: relative; margin-right: 16px; background-color: #fff; border-radius: 4px; border: 1px solid var(--col_button);}
+.allcare_popup.new_popup .uni_prog_tool tr.new_date .date_select select#newDate {padding: 6px 60px 6px 12px; height: 40px; color: #555; appearance: none; -webkit-appearance: none; -moz-appearance: none; font-size: 16px; font-weight: 400; line-height: 28px;}
+.allcare_popup.new_popup .uni_prog_tool tr.new_date .date_select::after {content: ''; width: 16px; height: 16px; position: absolute; top: 50%; right: 14px; transform: translateY(-50%); background: url('../include/images/arrow16_down.svg') no-repeat center / contain;}
+
+
+
 
 .allcare .new_radio_item {display: flex; align-items: center; position: relative;}
 .allcare .new_radio_item + .new_radio_item {margin-left: 16px;}
@@ -91,51 +114,51 @@
 
 
 /* [팝업] 운영대학 목록 - 프로그램 조회 팝업 (UI_ADHPAaM02) */ 
-.allcare .uni_prog_tool .search_table .new_th {font-size: 16px; font-weight: 600; color: #333; line-height: 28px; }
-.allcare .uni_prog_tool .new_table tr th {padding: 12px 20px;}
-.allcare .uni_prog_tool .new_table tr td {padding: 24px 20px;}
-.allcare .uni_prog_tool .new_table tr th:first-child, 
-.allcare .uni_prog_tool .new_table tr td:first-child {padding-left: 24px;}
-.allcare .uni_prog_tool .new_table tr th:last-child, 
-.allcare .uni_prog_tool .new_table tr td:last-child {padding-right: 24px;}
-.allcare .uni_prog_tool .new_table td {text-align: left;}
-.allcare .uni_prog_tool .new_table td span {vertical-align: baseline; font-weight: 600;}
-.allcare .uni_prog_tool .new_table td:first-child .prog_uni p {margin: 8px 0; color: #333; font-size: 16px; font-weight: 400; line-height: 28px;}
-.allcare .uni_prog_tool .new_table td:first-child .prog_tit p {color: #111;}
-.allcare .uni_prog_tool .new_table td:first-child .prog_dsc {display: flex; align-items: stretch; gap: 4px;}
-.allcare .uni_prog_tool .new_table td:first-child .prog_dsc .prog_tag span {display: none; padding: 4px 6px; border-radius: 4px; color: #fff; background-color: #19b3bd; border: 1px solid #19b3bd; font-size: 12px; font-weight: 400; line-height: 1; }
-.allcare .uni_prog_tool .new_table td:first-child .prog_dsc .prog_tag span.on {display: block;}
-.allcare .uni_prog_tool .new_table td:first-child .prog_dsc .prog_tag .tag_cdp {background-color: #e0024b; border: 1px solid #e0024b;}
-.allcare .uni_prog_tool .new_table td:first-child .prog_dsc .prog_tag .tag_lerc {background-color: var(--col_orange); border: 1px solid var(--col_orange);}
-.allcare .uni_prog_tool .new_table td:first-child .prog_dsc .prog_tag .tag_pm {background-color: #9e00ff; border: 1px solid #9e00ff;}
-.allcare .uni_prog_tool .new_table td:first-child .prog_dsc .prog_tag .tag_etc {background-color: #555; border: 1px solid #555;}
-.allcare .uni_prog_tool .new_table td:first-child .prog_dsc .prog_site span {display: none; font-size: 12px; font-weight: 400; line-height: 1;  padding: 4px 6px; border-radius: 4px;} 
-.allcare .uni_prog_tool .new_table td:first-child .prog_dsc .prog_site span.on {display: block;}
-.allcare .uni_prog_tool .new_table td:first-child .prog_dsc .prog_site .onsite {color: var(--col_blue); border: 1px solid var(--col_blue);}
-.allcare .uni_prog_tool .new_table td:first-child .prog_dsc .prog_site .offsite {color: #333; border: 1px solid #757575;}
-.allcare .uni_prog_tool .new_table td:first-child .prog_dsc .prog_year p {color: #333;}
-.allcare .uni_prog_tool .new_table td:last-child li {position: relative; padding-left: 24px; color: #333; font-size: 16px; font-weight: 400; line-height: 28px;}
-.allcare .uni_prog_tool .new_table td:last-child li+li {margin-top: 4px;}
-.allcare .uni_prog_tool .new_table td:last-child li span {color: #333;}
-.allcare .uni_prog_tool .new_table td:last-child .oper_time::before {content: ''; width: 16px; height: 16px; position: absolute; left: 0; top: 5px; background: url('../include/images/ico16_time.svg') no-repeat center / contain;}
-.allcare .uni_prog_tool .new_table td:last-child .oper_year::before {content: '';position: absolute; width: 14px; height: 14px; left: 1px; top: 6px; background: url('../include/images/ico16_date.svg') no-repeat center / contain;}
-.allcare .uni_prog_tool .new_table td:last-child .oper_count::before {content: ''; width: 16px; height: 16px; position: absolute; left: 0; top: 5px; background: url('../include/images/ico16_member_gray.svg') no-repeat center / contain;}
-.allcare .uni_prog_tool .new_table .oper_year {font-weight: 600;}
-.allcare .uni_prog_tool .new_table .oper_time, 
-.allcare .uni_prog_tool .new_table .oper_count {font-weight: 400;}
-.allcare .uni_prog_tool tr.new_date .date_select {position: relative; margin-right: 16px; background-color: #fff; border-radius: 4px; border: 1px solid var(--col_button);}
-.allcare .uni_prog_tool tr.new_date .date_select select#newDate {padding: 6px 60px 6px 12px; height: 40px; color: #555; appearance: none; -webkit-appearance: none; -moz-appearance: none; font-size: 16px; font-weight: 400; line-height: 28px;}
-.allcare .uni_prog_tool tr.new_date .date_select::after {content: ''; width: 16px; height: 16px; position: absolute; top: 50%; right: 14px; transform: translateY(-50%); background: url('../include/images/arrow16_down.svg') no-repeat center / contain;}
-.allcare .uni_prog_tool .box_form_content {padding: 24px 40px;}
-.allcare .uni_prog_tool .box_chk-group > span {margin-right: 18px;}
-.allcare .uni_prog_tool th, .allcare .uni_prog_tool td {padding-top: 12px; padding-bottom: 12px;}
-.allcare .uni_prog_tool .search_table td .box_chk-group {min-height: initial;}
+.allcare_popup.new_popup .uni_prog_tool .search_table .new_th {font-size: 16px; font-weight: 600; color: #333; line-height: 28px; }
+.allcare_popup.new_popup .uni_prog_tool .new_table tr th {padding: 12px 20px;}
+.allcare_popup.new_popup .uni_prog_tool .new_table tr td {padding: 24px 20px;}
+.allcare_popup.new_popup .uni_prog_tool .new_table tr th:first-child, 
+.allcare_popup.new_popup .uni_prog_tool .new_table tr td:first-child {padding-left: 24px;}
+.allcare_popup.new_popup .uni_prog_tool .new_table tr th:last-child, 
+.allcare_popup.new_popup .uni_prog_tool .new_table tr td:last-child {padding-right: 24px;}
+.allcare_popup.new_popup .uni_prog_tool .new_table td {text-align: left;}
+.allcare_popup.new_popup .uni_prog_tool .new_table td span {vertical-align: baseline; font-weight: 600;}
+.allcare_popup.new_popup .uni_prog_tool .new_table td:first-child .prog_uni p {margin: 8px 0; color: #333; font-size: 16px; font-weight: 400; line-height: 28px;}
+.allcare_popup.new_popup .uni_prog_tool .new_table td:first-child .prog_tit p {color: #111;}
+.allcare_popup.new_popup .uni_prog_tool .new_table td:first-child .prog_dsc {display: flex; align-items: stretch; gap: 4px;}
+.allcare_popup.new_popup .uni_prog_tool .new_table td:first-child .prog_dsc .prog_tag span {display: none; padding: 4px 6px; border-radius: 4px; color: #fff; background-color: #19b3bd; border: 1px solid #19b3bd; font-size: 12px; font-weight: 400; line-height: 1; }
+.allcare_popup.new_popup .uni_prog_tool .new_table td:first-child .prog_dsc .prog_tag span.on {display: block;}
+.allcare_popup.new_popup .uni_prog_tool .new_table td:first-child .prog_dsc .prog_tag .tag_cdp {background-color: #e0024b; border: 1px solid #e0024b;}
+.allcare_popup.new_popup .uni_prog_tool .new_table td:first-child .prog_dsc .prog_tag .tag_lerc {background-color: var(--col_orange); border: 1px solid var(--col_orange);}
+.allcare_popup.new_popup .uni_prog_tool .new_table td:first-child .prog_dsc .prog_tag .tag_pm {background-color: #9e00ff; border: 1px solid #9e00ff;}
+.allcare_popup.new_popup .uni_prog_tool .new_table td:first-child .prog_dsc .prog_tag .tag_etc {background-color: #555; border: 1px solid #555;}
+.allcare_popup.new_popup .uni_prog_tool .new_table td:first-child .prog_dsc .prog_site span {display: none; font-size: 12px; font-weight: 400; line-height: 1;  padding: 4px 6px; border-radius: 4px;} 
+.allcare_popup.new_popup .uni_prog_tool .new_table td:first-child .prog_dsc .prog_site span.on {display: block;}
+.allcare_popup.new_popup .uni_prog_tool .new_table td:first-child .prog_dsc .prog_site .onsite {color: var(--col_blue); border: 1px solid var(--col_blue);}
+.allcare_popup.new_popup .uni_prog_tool .new_table td:first-child .prog_dsc .prog_site .offsite {color: #333; border: 1px solid #757575;}
+.allcare_popup.new_popup .uni_prog_tool .new_table td:first-child .prog_dsc .prog_year p {color: #333;}
+.allcare_popup.new_popup .uni_prog_tool .new_table td:last-child li {position: relative; padding-left: 24px; color: #333; font-size: 16px; font-weight: 400; line-height: 28px;}
+.allcare_popup.new_popup .uni_prog_tool .new_table td:last-child li+li {margin-top: 4px;}
+.allcare_popup.new_popup .uni_prog_tool .new_table td:last-child li span {color: #333;}
+.allcare_popup.new_popup .uni_prog_tool .new_table td:last-child .oper_time::before {content: ''; width: 16px; height: 16px; position: absolute; left: 0; top: 5px; background: url('../include/images/ico16_time.svg') no-repeat center / contain;}
+.allcare_popup.new_popup .uni_prog_tool .new_table td:last-child .oper_year::before {content: '';position: absolute; width: 14px; height: 14px; left: 1px; top: 6px; background: url('../include/images/ico16_date.svg') no-repeat center / contain;}
+.allcare_popup.new_popup .uni_prog_tool .new_table td:last-child .oper_count::before {content: ''; width: 16px; height: 16px; position: absolute; left: 0; top: 5px; background: url('../include/images/ico16_member_gray.svg') no-repeat center / contain;}
+.allcare_popup.new_popup .uni_prog_tool .new_table .oper_year {font-weight: 600;}
+.allcare_popup.new_popup .uni_prog_tool .new_table .oper_time, 
+.allcare_popup.new_popup .uni_prog_tool .new_table .oper_count {font-weight: 400;}
+.allcare_popup.new_popup .uni_prog_tool tr.new_date .date_select {position: relative; margin-right: 16px; background-color: #fff; border-radius: 4px; border: 1px solid var(--col_button);}
+.allcare_popup.new_popup .uni_prog_tool tr.new_date .date_select select#newDate {padding: 6px 60px 6px 12px; height: 40px; color: #555; appearance: none; -webkit-appearance: none; -moz-appearance: none; font-size: 16px; font-weight: 400; line-height: 28px;}
+.allcare_popup.new_popup .uni_prog_tool tr.new_date .date_select::after {content: ''; width: 16px; height: 16px; position: absolute; top: 50%; right: 14px; transform: translateY(-50%); background: url('../include/images/arrow16_down.svg') no-repeat center / contain;}
+.allcare_popup.new_popup .uni_prog_tool .box_form_content {padding: 24px 40px;}
+.allcare_popup.new_popup .uni_prog_tool .box_chk-group > span {margin-right: 18px;}
+.allcare_popup.new_popup .uni_prog_tool th, .allcare .uni_prog_tool td {padding-top: 12px; padding-bottom: 12px;}
+.allcare_popup.new_popup .uni_prog_tool .search_table td .box_chk-group {min-height: initial;}
 
-.allcare .uni_prog_tool tr.new_date .from_btn_box {margin-top: 8px; display: flex; gap: 8px;}
-.allcare .uni_prog_tool tr.new_date .from_btn_box li {border: 1px solid var(--col_blue); border-radius: 4px; background-color: #fff;}
-.allcare .uni_prog_tool tr.new_date .from_btn_box li button {font-size: 14px; line-height: 24px; font-weight: 600; padding: 4px 12px; color: var(--col_blue);}
-.allcare .uni_prog_tool tr.new_date .from_btn_box li.active {background-color: var(--col_blue);}
-.allcare .uni_prog_tool tr.new_date .from_btn_box li.active button {color: #fff;}
+.allcare_popup.new_popup .uni_prog_tool tr.new_date .from_btn_box {margin-top: 8px; display: flex; gap: 8px;}
+.allcare_popup.new_popup .uni_prog_tool tr.new_date .from_btn_box li {border: 1px solid var(--col_blue); border-radius: 4px; background-color: #fff;}
+.allcare_popup.new_popup .uni_prog_tool tr.new_date .from_btn_box li button {font-size: 14px; line-height: 24px; font-weight: 600; padding: 4px 12px; color: var(--col_blue);}
+.allcare_popup.new_popup .uni_prog_tool tr.new_date .from_btn_box li.active {background-color: var(--col_blue);}
+.allcare_popup.new_popup .uni_prog_tool tr.new_date .from_btn_box li.active button {color: #fff;}
 
 
 /* 참여신청서 - 목록없음 (UI_ADHPAbM01) */
