--- a/pc/css/contents.css
+++ b/pc/css/contents.css
@@ -6,7 +6,7 @@
 /* new_sel_span : 라운드형태의 select 버튼 수정 */
 /* new_popup : 공통으로 사용할 팝업 레이아웃 */
 .allcare * {letter-spacing: -0.02em}
-.allcare .sr_only {position: absolute; width: 1px; height: 1px; padding: 0; margin: -1px; overflow: hidden; clip: rect(0 0 0 0); white-space: nowrap; border: 0; font-size: 0;}
+.allcare .sr_only {position: absolute; width: 1px; height: 1px; padding: 0; margin: -1px; overflow: hidden; clip: rect(0 0 0 0); white-space: nowrap; border: 0;}
 .allcare .mt8 {margin-top: 8px;}
 .allcare .input_txt {padding: 0 26px 0 12px}
 .allcare .box_table_wrap:not(.r_type01,.r_type02) .box_table.new_table th {font-size: 16px; font-weight: 600; line-height: 28px; color: #333;}
@@ -55,18 +55,16 @@
 .allcare_popup.new_popup input[type="checkbox"].new_chkbox:checked::before {content: ''; position: absolute; width: 20px; height: 20px; border: 1px solid var(--col_blue); border-radius: 4px; background-color: var(--col_blue);} 
 .allcare_popup.new_popup input[type="checkbox"].new_chkbox:checked::after {content: ''; position: absolute; width: 12px; height: 12px; left: 50%; top: 50%; transform: translate(-50%, -50%); background: url('../images/support/ico10_chk.svg') no-repeat center / contain;} 
 
-.allcare_popup.new_popup .new_ipt button[class*='ico']{right: 12px;}
-.allcare_popup.new_popup .new_ipt .input_txt {padding-left: 12px;} 
-.allcare_popup.new_popup [class^='btn'].medium.newbtn_w60 {padding: 0 12px; min-width: 60px;}
-.allcare_popup.new_popup [class^='btn'].medium.newbtn_w88 {padding: 0 16px; min-width: 88px;}
-
 .allcare_popup.new_popup .sr_only {position: absolute; width: 1px; height: 1px; padding: 0; margin: -1px; overflow: hidden; clip: rect(0 0 0 0); white-space: nowrap; border: 0; font-size: 0;}
 
 .allcare_popup.new_popup .uni_prog_tool tr.new_date .date_select {position: relative; margin-right: 16px; background-color: #fff; border-radius: 4px; border: 1px solid var(--col_button);}
 .allcare_popup.new_popup .uni_prog_tool tr.new_date .date_select select#newDate {padding: 6px 60px 6px 12px; height: 40px; color: #555; appearance: none; -webkit-appearance: none; -moz-appearance: none; font-size: 16px; font-weight: 400; line-height: 28px;}
 .allcare_popup.new_popup .uni_prog_tool tr.new_date .date_select::after {content: ''; width: 16px; height: 16px; position: absolute; top: 50%; right: 14px; transform: translateY(-50%); background: url('../include/images/arrow16_down.svg') no-repeat center / contain;}
 
-
+.allcare_popup.new_popup .new_ipt button[class*='ico']{right: 12px;}
+.allcare_popup.new_popup .new_ipt .input_txt {padding-left: 12px;} 
+.allcare_popup.new_popup [class^='btn'].medium.newbtn_w60 {padding: 0 12px; min-width: 60px;}
+.allcare_popup.new_popup [class^='btn'].medium.newbtn_w88 {padding: 0 16px; min-width: 88px;}
 
 
 .allcare .new_radio_item {display: flex; align-items: center; position: relative;}
@@ -200,8 +198,7 @@
 .mypage .progmg.allcare .my_ptcp_from .new_selectbox {position: relative; width: 200px; height: 40px; border: 1px solid #757575; border-radius: 4px;}
 .mypage .progmg.allcare .my_ptcp_from .new_selectbox select {padding: 6px 28px 6px 16px; width: 100%; height: 100%; appearance: none; -webkit-appearance: none; -moz-appearance: none;}
 .mypage .progmg.allcare .my_ptcp_from .new_selectbox::after {content: ''; width: 16px; height: 16px; position: absolute; top: 50%; right: 14px; transform: translateY(-50%); background: url('../include/images/arrow16_down.svg') no-repeat center / contain;}
-.mypage .progmg.allcare .my_ptcp_from .grade_wrap .tr_gradate #gradDate {max-width: 128px;}
-.mypage .progmg.allcare .my_ptcp_from .grade_wrap .tr_gradate input#gradDate {padding: 6px 40px 6px 12px;}
+.mypage .progmg.allcare .my_ptcp_from .grade_wrap .tr_gradate .input_txt {max-width: 128px; padding: 6px 40px 6px 12px;}
 .mypage .progmg.allcare .my_ptcp_from .grade_wrap .tr_gradate .btn_calendar {margin: 0; right: 10px; transform: translateY(-25%);} 
 .mypage .progmg.allcare .agm_area {display: flex; border-top: 1px solid #ddd; border-bottom: 1px solid #ddd;}
 .mypage .progmg.allcare .agm_box {padding: 12px 20px; display: flex; align-items: center; justify-content: space-between; gap: 16px; width: calc(100% - 195px); background-color: #f8f8f8;}
